Resolvi lo del color

--- a/Html/index.html
+++ b/Html/index.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adrian Nevarez</title>
-    <link rel="stylesheet" href="css/styles.css">
-    
+    <link rel="stylesheet" href="/CSS/styles.css">
 </head>
 <body>
+    <div class="color">
     <h1>Adrian Nevarez</h1>
     <!-- Here will be my avatar --> 
     <img src="" alt="">
 
-    <div class="wrapper">
+    <div>
         <h2>Links</h2>
         <ul class="contact" >
             <li>
@@ -52,6 +52,6 @@
             </li>
         </ol>
     </div>
-    
+</div>
 </body>
 </html>
