--- a/Html/index.html
+++ b/Html/index.html
@@ -30,5 +30,14 @@
                 
         </header>
     </div>
+
+    <!--INICIO-->
+    <section id="inicio" class="inicio">
+        <div class="contenido-banner">
+            <div class="contenedor-img">
+                <img class= editable-imagen src="/images/WhatsApp Image 2023-09-24 at 18.59.07 (1).jpeg" alt="">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
