--- a/Html/index.html
+++ b/Html/index.html
@@ -36,6 +36,13 @@
         <div class="contenido-banner">
             <div class="contenedor-img">
                 <img class= editable-imagen src="/images/WhatsApp Image 2023-09-24 at 18.59.07 (1).jpeg" alt="">
+                <h1>ADRIAN NEVAREZ</h1>
+                <h2>Backend developer(Java)</h2>
+                <div class="redes">
+                    <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-github"></i></a>
+                </div>
             </div>
         </div>
     </section>
